# auto_monitor

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
bot/: main.py  states.py  utils.py
bot/handlers/: __init__.py  filters.py  my_filters.py  start.py  stats.py  test.py
bot/keyboards/: __init__.py  inline.py
bot/middlewares/: throttling.py
config/: settings.py
migrations/: env.py
migrations/versions/versions/: d74b25217bd9_initial.py
models/: __init__.py  base.py  filter.py  listing.py  price_history.py  user.py
parser/: __init__.py  olx.py
services/: __init__.py  duplicate_checker.py  notifier.py  price_analyzer.py
tasks/: celery_app.py  monitor.py
