[project]
name = "auto-monitor"
version = "0.1.0"
description = "Telegram bot for monitoring cars on OLX.ua"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram==3.7.0",
    "sqlalchemy==2.0.31",
    "asyncpg==0.29.0",
    "alembic==1.13.2",
    "pydantic-settings==2.3.4",
    "celery==5.4.0",
    "redis==5.0.7",
    "playwright==1.44.0",
    "flower==2.0.1",
]

[tool.uv]
dev-dependencies = []
